--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "start": "next start"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.1",
+    "@chakra-ui/system": "^1.10.1",
+    "@chakra-ui/toast": "^1.5.2",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@material-ui/core": "^4.12.3",
-    "@material-ui/icons": "^4.11.2",
+    "framer-motion": "^5.6.0",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
